[Fix] Foundation 5 overrides font-size for <span> in <h1>
<h1><span>this text</span></h1>
Here "this text" will be rendered with the wrong font-size.

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -127,6 +127,10 @@ h1, h2, h3, h4, h5, h6 {
   &.white-on-red {
     display: inline-block;
   }
+
+  span {
+    font-size: inherit;
+  }
 }
 
 %text-white-on-darkgray {
