--- a/global_change_lab/templates/debug_styles.html
+++ b/global_change_lab/templates/debug_styles.html
@@ -3,12 +3,36 @@
 
 {% block content %}
 
-<h1>This is a heading 1</h1>
-<h2>This is a heading 2</h2>
-<h3>This is a heading 3</h3>
-<h4>This is a heading 4</h4>
-<h5>This is a heading 5</h5>
-<h6>This is a heading 6</h6>
+<div class="row">
+  <div class="columns medium-6">
+    <h1>This is a heading 1</h1>
+    <h2>This is a heading 2</h2>
+    <h3>This is a heading 3</h3>
+    <h4>This is a heading 4</h4>
+    <h5>This is a heading 5</h5>
+    <h6>This is a heading 6</h6>
+  </div>
+  <div class="columns medium-6">
+    <code>class: white-on-red</code><br>
+    <h1 class="white-on-red">This is a heading 1</h1>
+    <h2 class="white-on-red">This is a heading 2</h2>
+    <h3 class="white-on-red">This is a heading 3</h3>
+    <h4 class="white-on-red">This is a heading 4</h4>
+    <h5 class="white-on-red">This is a heading 5</h5>
+    <h6 class="white-on-red">This is a heading 6</h6>
+  </div>
+</div>
+<div class="row">
+  <div class="columns medium-6">
+    <code>class: white-on-darkgray</code><br>
+    <h1 class="white-on-darkgray">This is a heading 1</h1>
+    <h2 class="white-on-darkgray">This is a heading 2</h2>
+    <h3 class="white-on-darkgray">This is a heading 3</h3>
+    <h4 class="white-on-darkgray">This is a heading 4</h4>
+    <h5 class="white-on-darkgray">This is a heading 5</h5>
+    <h6 class="white-on-darkgray">This is a heading 6</h6>
+  </div>
+</div>
 
 <p>This is a paragraph with <strong>strong</strong> and <emph>emphasis</emph>
 
