--- a/scss/projects.scss
+++ b/scss/projects.scss
@@ -48,6 +48,38 @@ h3.shared-by-others {
     font-weight: bold;
     color: $gcl-darkgray;
   }
+
+  div.content {
+    position: relative;
+    max-height: rem-calc(300px);
+    overflow-y: hidden;
+    margin-bottom: 1rem;
+
+    div.hider {
+      // position: absolute;
+      // width: 100%;
+      height: 2rem;
+      // bottom: 0;
+      text-align: center;
+      line-height: 2rem;
+
+      a { color: $gcl-red; }
+      display: none;
+    }
+
+    div.shower {
+      position: absolute;
+      width: 100%;
+      height: 2rem;
+      bottom: 0;
+      text-align: center;
+      line-height: 2rem;
+      @include gradient(rgba(255,255,255,0), rgba(255,255,255,1.0));
+
+      a { color: $gcl-red; }
+    }
+  }
+
   img.project-image {
     // max-width:  rem-calc(250px);
     // max-height: rem-calc(250px);
