[Add] Link to edit training bit cover from the cover page
+ Link to view skill from skill_edit page
+ Link to view training bit from trainingbit_edit page
+ Fix link to edit training bit in trainingbit_view (should link to
trainingbit_edit_content)

--- a/skills/templates/skills/skill_edit.html
+++ b/skills/templates/skills/skill_edit.html
@@ -9,6 +9,11 @@
 
 {% block content %}
 
+<div class="page-buttons">
+  {# View trainingbit button #}
+    <a href="{% url 'skills:skill_view' skill.id %}" class="button info">View skill</a>
+</div>
+
 <form id="training-bit-cover-form" action="{{ request.url }}" method="post" enctype="multipart/form-data">
   {% csrf_token %}
   <div class="input-field-row">
