--- a/scss/skills.scss
+++ b/scss/skills.scss
@@ -52,13 +52,11 @@ body.skill-view {
       &.description {
         padding-left: 0.5rem;
         font-weight: 200;
-        .info {
-          padding-left: 0.5rem;
-        }
 
         p {
           font-size: 0.9rem;
           font-weight: 200;
+          margin-bottom: 0.5rem;
         }
       }
     }
@@ -84,9 +82,6 @@ body.skill-view {
   }
 
   div.info {
-    position: absolute;
-    bottom: 0;
-    left: 0;
     width: 100%;
     color: $gcl-darkgray;
     background-color: white;
