[Design] Same button and text on trainingbit_cover and skill_view

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -222,6 +222,11 @@ h1 {
   }
 }
 
+p.skill-description, p.trainingbit-description {
+  font-size: 1.4rem;
+  font-weight: 300;
+}
+
 // Or selectively include components
 // @import
 //   "foundation/components/accordion",
