--- a/skills/templates/skills/trainingbit_cover.html
+++ b/skills/templates/skills/trainingbit_cover.html
@@ -22,7 +22,7 @@
   <div class="columns medium-9 main-column">
     <p class="trainingbit-description">{{ trainingbit.description }}</p>
     <div class="start-trainingbit-container">
-      <a href="{% url 'skills:trainingbit_start' trainingbit.id %}" class="button success small">Start this training bit</a>
+      <a href="{% url 'skills:trainingbit_start' trainingbit.id %}" class="button small begin">Start this training bit</a>
     </div>
     <hr>
     <h2>Shared by others</h2>
