[Design] trainingbit_grid: Fit cover image to width of <li>

--- a/scss/trainingbit_grid.scss
+++ b/scss/trainingbit_grid.scss
@@ -58,6 +58,7 @@ li.trainingbit {
     position: absolute;
     top: 0; bottom: 0; right: 0; left: 0; /*fill parent*/
     background-repeat: no-repeat;
+    background-size: 100%;
   }
 
   div.label {
