--- a/skills/templates/skills/trainingbit_view.html
+++ b/skills/templates/skills/trainingbit_view.html
@@ -62,14 +62,113 @@
   <p class="trainingbit-description">{{ trainingbit.description }}</p>
   <div id="learn" class="trainingbit-section">
     <h1>1. Learn</h1>
+    <a href="#" class="info-icon" data-reveal-id="learn-info-modal" data-reveal>&#8505;</a>
+    <div id="learn-info-modal" class="reveal-modal" data-reveal>
+      <h1>Learn</h1>
+          Sed ut perspiciatis, unde omnis iste natus error sit voluptatem
+      accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab
+      illo inventore veritatis et quasi architecto beatae vitae dicta sunt,
+      explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut
+      odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione
+      voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum,
+      quia dolor sit amet consectetur adipisci[ng] velit, sed quia non numquam
+      [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam
+      quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem
+      ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
+      consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate
+      velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum
+      fugiat, quo voluptas nulla pariatur?
+
+          At vero eos et accusamus et iusto odio dignissimos ducimus, qui
+      blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et
+      quas molestias excepturi sint, obcaecati cupiditate non provident,
+      similique sunt in culpa, qui officia deserunt mollitia animi, id est
+      laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
+      distinctio. Nam libero tempore, cum soluta nobis est eligendi optio,
+      cumque nihil impedit, quo minus id, quod maxime placeat, facere possimus,
+      omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem
+      quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet,
+      ut et voluptates repudiandae sint et molestiae non recusandae. Itaque
+      earum rerum hic tenetur a sapiente delectus, ut aut reiciendis
+      voluptatibus maiores alias consequatur aut perferendis doloribus
+      asperiores repellat…
+
+      <a class="close-reveal-modal">&#215;</a>
+    </div>
     <ul></ul>
   </div>
   <div id="act" class="trainingbit-section">
     <h1>2. Act</h1>
+    <a href="#" class="info-icon" data-reveal-id="act-info-modal" data-reveal>&#8505;</a>
+    <div id="act-info-modal" class="reveal-modal" data-reveal>
+      <h1>Act</h1>
+          Sed ut perspiciatis, unde omnis iste natus error sit voluptatem
+      accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab
+      illo inventore veritatis et quasi architecto beatae vitae dicta sunt,
+      explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut
+      odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione
+      voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum,
+      quia dolor sit amet consectetur adipisci[ng] velit, sed quia non numquam
+      [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam
+      quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem
+      ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
+      consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate
+      velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum
+      fugiat, quo voluptas nulla pariatur?
+
+          At vero eos et accusamus et iusto odio dignissimos ducimus, qui
+      blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et
+      quas molestias excepturi sint, obcaecati cupiditate non provident,
+      similique sunt in culpa, qui officia deserunt mollitia animi, id est
+      laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
+      distinctio. Nam libero tempore, cum soluta nobis est eligendi optio,
+      cumque nihil impedit, quo minus id, quod maxime placeat, facere possimus,
+      omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem
+      quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet,
+      ut et voluptates repudiandae sint et molestiae non recusandae. Itaque
+      earum rerum hic tenetur a sapiente delectus, ut aut reiciendis
+      voluptatibus maiores alias consequatur aut perferendis doloribus
+      asperiores repellat…
+
+      <a class="close-reveal-modal">&#215;</a>
+    </div>
     <ul></ul>
   </div>
   <div id="share" class="trainingbit-section">
     <h1>3. Share</h1>
+    <a href="#" class="info-icon" data-reveal-id="share-info-modal" data-reveal>&#8505;</a>
+    <div id="share-info-modal" class="reveal-modal" data-reveal>
+      <h1>Share</h1>
+          Sed ut perspiciatis, unde omnis iste natus error sit voluptatem
+      accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab
+      illo inventore veritatis et quasi architecto beatae vitae dicta sunt,
+      explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut
+      odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione
+      voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum,
+      quia dolor sit amet consectetur adipisci[ng] velit, sed quia non numquam
+      [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam
+      quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem
+      ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
+      consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate
+      velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum
+      fugiat, quo voluptas nulla pariatur?
+
+          At vero eos et accusamus et iusto odio dignissimos ducimus, qui
+      blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et
+      quas molestias excepturi sint, obcaecati cupiditate non provident,
+      similique sunt in culpa, qui officia deserunt mollitia animi, id est
+      laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
+      distinctio. Nam libero tempore, cum soluta nobis est eligendi optio,
+      cumque nihil impedit, quo minus id, quod maxime placeat, facere possimus,
+      omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem
+      quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet,
+      ut et voluptates repudiandae sint et molestiae non recusandae. Itaque
+      earum rerum hic tenetur a sapiente delectus, ut aut reiciendis
+      voluptatibus maiores alias consequatur aut perferendis doloribus
+      asperiores repellat…
+
+      <a class="close-reveal-modal">&#215;</a>
+    </div>
     <ul></ul>
     <form id="project-form" action="{% url 'skills:trainingbit_view' trainingbit.id %}" method="POST"  enctype="multipart/form-data">
       {% csrf_token %}
