--- a/global_change_lab/templates/new_user_suggestions.html
+++ b/global_change_lab/templates/new_user_suggestions.html
@@ -6,14 +6,12 @@
 <script src="/static/global_change_lab/js/foundation.orbit.min.js"></script>
 {% endblock %}
 
-{% block content %}
-
-
-<div id="info-box">
+{% block info %}
   <p>Front page help text. Skills are different trainings where you practice different skillsets as an activist.</p>
   <p>Each training consists of a number of Training Bits. Each time you finish a training bit you'll get one step closer to finishing a skill.</p>
-  <a href="#" class="close">&times;</a>
-</div>
+{% endblock %}
+
+{% block content %}
 
 <div id="new-user-suggestions">
   <h1>You might start with these <span class="white-on-red">training bits</span></h1>
