--- a/skills/templates/skills/skills_overview.html
+++ b/skills/templates/skills/skills_overview.html
@@ -3,6 +3,12 @@
 
 {% block body-classes %}skills-overview{% endblock %}
 
+{% block info %}
+  <p>Skills are different trainings where you can practice different skillsets as an activist</p>
+  <p>Each training consists of a number of <strong>training bits</strong></p>
+  <p>Each time you finish a training bit you'll get on step closer to finishing a skill.</p>
+{% endblock %}
+
 {% block content %}
 <div class="page-buttons">
   {# Topics #}
