--- a/skills/templates/skills/trainingbits_overview.html
+++ b/skills/templates/skills/trainingbits_overview.html
@@ -2,6 +2,20 @@
 
 <h1>Training Bit overview</h1>
 
+{% block info %}
+<p>
+A training bit is a small bit of training activity that goes into a skill. Each training
+bit has some inspiring content, an activity that you can do and gives you the option of
+sharing your thoughts, actions, images or projects with others.
+There are 3 types of training bits:
+</p>
+<p><strong>Tool</strong> gives you concrete methods, practical and actionable recipes for action.</p>
+<p><strong>Inspiration</strong> where you find inspirational cases and examples from current or 
+historic activist movements.</p>
+<p><strong>Background</strong> where you get behind the theories, thoughts and principles
+behind the topics.</p>
+{% endblock %}
+
 {% block content %}
 <div class="page-buttons">
   {# Topics #}
